maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:19: error: reassignment to val
    right();angle=angle+1
                 ^PledgeMaze:21: error: reassignment to val
      left; angle=angle-1; forward()
                 ^PledgeMaze:28: error: reassignment to val
    left(); angle=angle-1
                 ^