maze.pledge.PledgeMaze.scala.code
override def run() {
  var dir:Direction=Direction.NORTH;
  var angle=0;
  setDirection(Direction.NORTH)
  while (!isOverBaggle()) {
    while (!isFacingWall()) {
      forward()
    }
    right(); angle+=1
    while (angle!=0) {
      keepHandOnSideWall(angle)
    }
  }
}

def keepHandOnSideWall(angle:Int) {
  if (!isFacingWall()) {
    right();angle=angle+1
    if (isFacingWall()) {
      left; angle=angle-1; forward()
    }
    else {
      forward()
    }
  }
  else {
    left(); angle=angle-1
  }
}
